nexus-rt/tests/ui/select_non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `Kind::C` not covered
  --> tests/ui/select_non_exhaustive.rs:27:13
   |
27 | /             select! {
28 | |                 reg,
29 | |                 Kind::A => handle,
30 | |                 Kind::B => handle,
31 | |             },
   | |_____________^ pattern `Kind::C` not covered
   |
note: `Kind` defined here
  --> tests/ui/select_non_exhaustive.rs:12:6
   |
12 | enum Kind {
   |      ^^^^
...
15 |     C,
   |     - not covered
   = note: the matched value is of type `Kind`
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
31 ~             },
32 ~             Kind::C => todo!(),
   |
